# sipethon-3_6_ainsight-be

./: .gitignore  Dockerfile  fly.toml  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt
apps/answer/: apps.py  filters.py  models.py  schemas.py  views.py
apps/answer/migrations/: 0001_initial.py  0002_rename_model_name_modelanswer_model_id.py  0003_alter_useranswer_question.py  0004_alter_modelanswer_model_id.py
apps/chat/: endpoints.py  urls.py
apps/chat/templates/chat/: chat.html
apps/core/: views.py
contrib/django/models/: __init__.py  base.py
contrib/django/ninja/: pagination.py
django_project/: app.py  asgi.py  settings.py  urls.py  wsgi.py
django_project/settings/: base.py  dev.py  local.py
