[tool.poetry]
name = "ainsight-be"
version = "0.1.0"
description = ""
authors = ["clogic <choiseungil29@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1.3"
sentry-sdk = "^2.20.0"
gunicorn = "^23.0.0"
annotated-types = "0.7.0"
asgiref = "3.8.1"
django-cors-headers = "4.6.0"
django-ninja = "1.3.0"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
sqlparse = "0.5.1"
typing-extensions = "4.12.2"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
